--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     - docker build -t hmichaels/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run hmichaels/react-test npm test -- --coverage
+    - docker run -e CI=true hmichaels/react-test npm test
 
 after_success:
     - docker build -t hmichaels/multi-client ./client
